k8s_manifests/backend_sfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: todons

spec:
  replicas: 2

  selector:
    matchLabels:
      app: todo_backend

  template:
    metadata:
      labels:
        app: todo_backend

    spec:
      containers:
      - name: backendtodo
        image: saivarma5557/todoapp:todobackendv4

        ports:
        - containerPort: 5000
