k8s_manifests/dp_with_SA.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: dev

spec:

  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:

    metadata:
      labels:
        app: frontend

    spec:

      serviceAccountName: prod-user

      containers:

      - name: nginx
        image: nginx
