k8s_manifests/frontend_dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo_frontend
  template:
    metadata:
      labels:
        app: todo_frontend
    spec:
      containers:
      - name: frontendtodo
        image: saivarma5557/todoapp:frontendv11
        ports:
        - containerPort: 80

        resources:

          requests:
            cpu: "50m"
            memory: "128Mi"

          limits:
            cpu: "200m"
            memory: "256Mi"
