k8s_manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: todons

spec:
  serviceName: mongo

  replicas: 3

  selector:
    matchLabels:
      app: mongo

  template:
    metadata:
      labels:
        app: mongo

    spec:
      containers:
      - name: mongo
        image: mongo:8

        command:
        - mongod
        - "--replSet"
        - "rs0"
        - "--bind_ip_all"

        ports:
        - containerPort: 27017

        volumeMounts:
        - name: mongo-data
          mountPath: /data/db

  volumeClaimTemplates:
  - metadata:
      name: mongo-data

    spec:
      accessModes:
      - ReadWriteOnce

      resources:
        requests:
          storage: 1Gi
