k8s_manifests/Headless_SVC.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: todons
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
