k8s_manifests/backend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: todo_backend
  ports:
  - port: 5000             #service port
    targetPort: 5000       #container port
  type: ClusterIP
