k8s_manifests/frontend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: todo_frontend
  ports:
  - port: 5173             #service port
    targetPort: 5173       #container port
  type: NodePort
