k8s_manifests/mongo_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
  - port: 27017             #service port
    targetPort: 27017       #container port
  type: NodePort
