k8s_manifests/GWHTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-route
  namespace: todons

spec:
  parentRefs:
  - name: todo-gateway

  hostnames:
  - "todo.local"

  rules:

  - matches:
    - path:
        type: PathPrefix
        value: /

    backendRefs:
    - name: frontend
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /api

    backendRefs:
    - name: backend
      port: 5000

  - matches:
    - path:
        type: PathPrefix
        value: /db

    backendRefs:
    - name: backend
      port: 5000
