k8s_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  namespace: todons
spec:
  ingressClassName: nginx

  rules:
  - host: todo.local

    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000

      - path: /db
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 5000
