k8s_manifests/NWBackToDB.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: mongo-allow-backend
  namespace: todons

spec:

  podSelector:
    matchLabels:
      app: mongo

  policyTypes:
  - Ingress

  ingress:

  - from:

    - podSelector:
        matchLabels:
          app: todo_backend

    ports:

    - protocol: TCP
      port: 27017
