k8s_manifests/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: deny-all
  namespace: todons

spec:
  podSelector: {}

  policyTypes:
  - Ingress
